[package]
name = "number_game_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_colors = "*"
dialoguer = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
rand = "*"
console = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
